[gd_scene load_steps=12 format=3 uid="uid://dvht6a4f8lbge"]

[ext_resource type="Texture2D" uid="uid://dxyxywk62ekyb" path="res://assets/sprites/enemies/paraysu.png" id="1_b07mk"]
[ext_resource type="Script" uid="uid://csuoqkrdagebl" path="res://enemy/paraysu.gd" id="1_k5u3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tptb2"]
size = Vector2(19.3333, 37.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4lbc"]
size = Vector2(12.6667, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0bcr"]
size = Vector2(36, 24)

[sub_resource type="Animation" id="Animation_tc2mc"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.6, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_tptb2"), SubResource("RectangleShape2D_b4lbc"), SubResource("RectangleShape2D_b0bcr"), SubResource("RectangleShape2D_tptb2"), SubResource("RectangleShape2D_tptb2")]
}

[sub_resource type="Animation" id="Animation_sbgm6"]
resource_name = "parcheute _open"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_u4rls"]
resource_name = "slow_fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8lff"]
_data = {
&"fall": SubResource("Animation_tc2mc"),
&"parcheute _open": SubResource("Animation_sbgm6"),
&"slow_fall": SubResource("Animation_u4rls")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wasa"]
size = Vector2(32, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpc6y"]
size = Vector2(14.3333, 16)

[node name="paraysu" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_k5u3e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_b07mk")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c8lff")
}

[node name="fall_to_open_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 1.5)
scale = Vector2(1, 1.35)

[node name="change_X_direction_start" type="Timer" parent="."]
wait_time = 0.1

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-0.333334, 6.33333)
shape = SubResource("RectangleShape2D_0wasa")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-0.5, 8)
shape = SubResource("RectangleShape2D_rpc6y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(30, 15.3333)
shape = SubResource("RectangleShape2D_tptb2")
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="fall_to_open_timer" to="." method="_on_fall_to_open_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="change_X_direction_start" to="." method="_on_change_x_direction_start_timeout"]
